Fix spacing button

--- a/assets/styles/style-mobile.css
+++ b/assets/styles/style-mobile.css
@@ -1337,7 +1337,7 @@
   }
 
   .wink-detail-sec .wink-detail__desc .desc {
-    margin-bottom: 24px;
+    /* margin-bottom: 24px; */
   }
 
   .swiper-control-parent {
