--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6372,7 +6372,7 @@ select:-webkit-autofill:focus {
     margin-bottom: 16px;
   }
   .deals-hotels .hotels__filter {
-    margin-bottom: 0;
+    margin-bottom: 16px;
   }
   .deals-hotels .hotels__result {
     margin-top: 16px;
